--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
 <body>
   <div id="app">
     <h1>{{titulo}}</h1>
+    <p>cantidad : {{cantidad}}</p>
+    <p>{{cantidad>= 1000 ? "Es mayor o igual a mil" : "Es menor que mil"}}</p>
+    <a v-bind:href="enlace ">ir a google</a>
+
+    <h2 v-if="estado">Cuenta activa</h2>
+    <h2 v-else>Cuenta Desactivada</h2>
+
+    <h2 v-if="cantidad > 500">Cantidad: {{cantidad}}</h2>
+    <h2 v-else-if="cantidad = 500 && cantidad > 0"> 
+      Cantidad: 
+      <span style="color:red">{{cantidad}}</span>
+    </h2>
+    <h2 v-else>Sin cantidad: {{cantidad}}</h2>
+
+    <hr>
+  <h2>Servicios disponibles:</h2>
+  <ul>
+      <li v-for="item in servicios">{{item}}</li>
+  </ul>
+
+  <ul>
+      <li 
+      v-for="(item, index) in servicios" :key="index"
+      >
+          {{index + 1}} - {{item}}
+      </li>
+  </ul>
+
   </div>
   <script src ="main.js"></script>
   <script>
